--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>
-            LingDad Site.
+            十月天蝎-爱丽丝漫游奇境续集
         </title>
     </head>
     <body>
