--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
         </title>
     </head>
     <body>
-        <title>aaaaaa爱丽丝漫游奇境续集</title>
+        <h1 align="center">十月天蝎-爱丽丝漫游奇境续集</h1>
+        <hr align="center" width="60%">
         <h1>十年后，爱丽丝和姐姐在散步。忽然发现前面的树洞里有一丝光亮。爱丽丝立刻跑上前去，想看看那个树洞里到底有什么？可是当姐姐到树洞前时，爱丽丝已经不见了，原来他已经被树洞吸进去了。</h1>
         <h1>爱丽丝来到了一个黑漆漆的洞里，"我这是在哪儿？"爱丽丝自言自语道。突然她觉得脚下一空，身体一沉，开始向下坠落。这场面怎么这么熟悉？我不会回到十年前的那个梦里了吧！等我从这个洞里掉出去，我会不会遇见10年前的自己？眼泪池塘还在吗？我还会遇到渡渡鸟他们吗？说着说着，四周亮了起来。</h1>
         <h1>扑通一声，爱丽丝掉进了水里，天哪！十年了，眼泪池塘竟然还在。</h1>
