--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
             十月天蝎-爱丽丝漫游奇境续集
         </title>
     </head>
-    <body>
+    <body style="margin:0;padding:0">
         <h1 align="center">十月天蝎-爱丽丝漫游奇境续集</h1>
         <hr align="center" width="60%">
         <h1>十年后，爱丽丝和姐姐在散步。忽然发现前面的树洞里有一丝光亮。爱丽丝立刻跑上前去，想看看那个树洞里到底有什么？可是当姐姐到树洞前时，爱丽丝已经不见了，原来他已经被树洞吸进去了。</h1>
